test/cli/test/anypattern_skip_error/kyverno-test.yaml
name: validate-service-loadbalancer
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Service
  policy: validate-service-loadbalancer
  resources:
  - service-public-pass
  result: pass
  rule: check-loadbalancer-public
- kind: Service
  policy: validate-service-loadbalancer
  resources:
  - service-public-2-pass
  result: pass
  rule: check-loadbalancer-public
- kind: Service
  policy: validate-service-loadbalancer
  resources:
  - service-public-fail
  result: fail
  rule: check-loadbalancer-public
- kind: Service
  policy: validate-service-loadbalancer
  resources:
  - service-clusterip-skip
  result: skip
  rule: check-loadbalancer-public
