test/cli/test/anypattern_skip_error/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-service-loadbalancer
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Service
    name: check-loadbalancer-public
    validate:
      failureAction: Enforce
      anyPattern:
      - metadata:
          annotations:
            service.beta.kubernetes.io/aws-load-balancer-security-groups: ?*
        spec:
          <(type): LoadBalancer
      - spec:
          <(type): LoadBalancer
          loadBalancerSourceRanges: '*'
      message: Service of type 'LoadBalancer' is public and does not explicitly define
        network security. To use a public LB you must supply either spec[loadBalancerSourceRanges]
        or the 'service.beta.kubernetes.io/aws-load-balancer-security-groups' annotation.
